# perf-ninja

./: .gitignore
labs/core_bound/compiler_intrinsics_1/: bench.cpp  solution.cpp  solution.h
labs/memory_bound/loop_tiling_1/: bench.cpp  solution.cpp
labs/memory_bound/mem_alignment_1/: solution.cpp
labs/memory_bound/mem_order_violation_1/: solution.cpp
labs/memory_bound/swmem_prefetch_1/: CMakeLists.txt  OPTIMIZATION_GUIDE.md  build_and_test.sh  solution.cpp
